# rusty_pet

./: Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: auth.rs  cache.rs  cli.rs  config.rs  data_processor.rs  data_validation.rs  errors.rs  export.rs  formatters.rs  headless.rs  interactive.rs  main.rs  offline_manager.rs  offline_queue.rs  search.rs  token.rs
src/api/: client.rs
src/assets/: client_config.toml
